[package]
name = "htop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="0.8.4", features=["macros", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.36.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"
